--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsKZlk6ffdGfTpk4Z+B9Pd",
+      "authorship_tag": "ABX9TyPgC2uGyyB6pgnpgXiFmV3M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xvVu6IA_CCPB",
-        "outputId": "a17ce680-88f6-4220-b471-d371da3f3ecb"
+        "outputId": "d3bcac4e-80f0-42c2-b96f-04249cb797c0"
       },
       "outputs": [
         {
@@ -71,16 +71,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ffe4bfee-5dde-4ff2-d3b0-5524ce33979e"
+        "outputId": "7becb8a7-146d-4356-eff8-b0cf805a74f6"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Your Name: nanu\n",
-            "My name is : nanu\n"
+            "Enter Your Name: Neeraj\n",
+            "My name is : Neeraj\n"
           ]
         }
       ]
@@ -89,25 +89,26 @@
       "cell_type": "code",
       "source": [
         "# python is case sensitive\n",
-        "a = 5\n",
-        "A = 10\n",
+        "nama = 5\n",
+        "Name = 10\n",
         "# both a and A are different\n",
-        "print(\"a: \", a, \"and A: \", A)"
+        "print(\"name: \", name ,\"\\nName: \", Name)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jsfGMxGdCXiO",
-        "outputId": "88111cd2-597e-4491-a981-14506e8ce26b"
+        "outputId": "0f48df12-bab7-4634-a4d3-179ba49373b2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a:  5 and A:  10\n"
+            "name:  Neeraj \n",
+            "Name:  10\n"
           ]
         }
       ]
@@ -124,48 +125,67 @@
     {
       "cell_type": "code",
       "source": [
-        "marks = 1\n",
-        "name = \"John\"\n",
-        "salary = 50000.0\n",
-        "cordinates = 4 + 2j\n",
-        "isAlive = False\n",
-        "education = None"
+        "# 2. Data Types\n",
+        "\n",
+        "# Numeric Types\n",
+        "integer_var = 42\n",
+        "float_var = 3.14\n",
+        "complex_var = 2 + 3j\n",
+        "\n",
+        "# String Type\n",
+        "string_var = \"Hello, Python!\"\n",
+        "\n",
+        "# List\n",
+        "my_list = [1, 2, 3, \"apple\", \"banana\"]\n",
+        "\n",
+        "# Tuple\n",
+        "my_tuple = (4, 5, \"orange\", \"grape\")\n",
+        "\n",
+        "# Set\n",
+        "my_set = {1, 2, 3, 3, 4}\n",
+        "\n",
+        "# Dictionary\n",
+        "my_dict = {\"name\": \"John\", \"age\": 25, \"city\": \"New York\"}\n",
+        "\n",
+        "# Boolean\n",
+        "is_true = True\n",
+        "is_false = False\n",
+        "\n",
+        "# Displaying the values\n",
+        "print(\"Integer:\", integer_var)\n",
+        "print(\"Float:\", float_var)\n",
+        "print(\"Complex:\", complex_var)\n",
+        "print(\"String:\", string_var)\n",
+        "print(\"List:\", my_list)\n",
+        "print(\"Tuple:\", my_tuple)\n",
+        "print(\"Set:\", my_set)\n",
+        "print(\"Dictionary:\", my_dict)\n",
+        "print(\"Boolean True:\", is_true)\n",
+        "print(\"Boolean False:\", is_false)"
       ],
       "metadata": {
-        "id": "0-hZDKu4CjdC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(type(marks))\n",
-        "print(type(name))\n",
-        "print(type(salary))\n",
-        "print(type(cordinates))\n",
-        "print(type(isAlive))\n",
-        "print(type(education))"
-      ],
-      "metadata": {
+        "id": "0-hZDKu4CjdC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "09etXoO_Cz-k",
-        "outputId": "2b0c5207-ecaf-4ef2-f47c-4d44b9a5bf43"
+        "outputId": "8c2f697d-578c-4f0c-eb0b-ee8b2591cea4"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'>\n",
-            "<class 'str'>\n",
-            "<class 'float'>\n",
-            "<class 'complex'>\n",
-            "<class 'bool'>\n",
-            "<class 'NoneType'>\n"
+            "Integer: 42\n",
+            "Float: 3.14\n",
+            "Complex: (2+3j)\n",
+            "String: Hello, Python!\n",
+            "List: [1, 2, 3, 'apple', 'banana']\n",
+            "Tuple: (4, 5, 'orange', 'grape')\n",
+            "Set: {1, 2, 3, 4}\n",
+            "Dictionary: {'name': 'John', 'age': 25, 'city': 'New York'}\n",
+            "Boolean True: True\n",
+            "Boolean False: False\n"
           ]
         }
       ]
@@ -173,35 +193,48 @@
     {
       "cell_type": "code",
       "source": [
-        "k = int(input())\n",
+        "#Type checking\n",
+        "print(type(integer_var))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "09etXoO_Cz-k",
+        "outputId": "69b3f317-ab26-43d7-edbb-477f8095c7f7"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "k = input()\n",
         "print(type(k))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "X4Lkj86FC2Xq",
-        "outputId": "94bdbcd8-3a8d-43ad-9bcc-6b75a2de51cb"
+        "outputId": "6d86c509-44c9-46ae-9490-e04a5052bcca"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "str\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: 'str'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-fad7654a565e>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'str'"
+            "456\n",
+            "<class 'str'>\n"
           ]
         }
       ]
@@ -209,7 +242,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Identifiers"
+        "## 3. Identifiers\n",
+        "\n",
+        "Identifiers are names given to variables, functions, classes, or other entities in Python. They play a crucial role in making your code readable and understandable.\n",
+        "\n",
+        "## Rules for Identifiers\n",
+        "\n",
+        "1. Must start with a letter (a-z, A-Z) or an underscore (_).\n",
+        "2. Can be followed by letters, digits, or underscores.\n",
+        "3. Case-sensitive (e.g., `myVariable` and `MyVariable` are different).\n",
+        "4. Must not include keywords as variable/Identifiers names\n",
+        "\n"
       ],
       "metadata": {
         "id": "cXkItRTBDAhO"
@@ -218,42 +261,30 @@
     {
       "cell_type": "code",
       "source": [
-        "n1ame = \"John\"\n",
+        "n1ame = \"Jonathan\"\n",
         "#int = \"hi hello\"\n",
         "#print(int)\n",
         "\n",
         "k = 45.0\n",
         "\n",
-        "print(k,type(k))\n",
-        "print(int(k))"
+        "print(n1ame,type(n1ame))\n",
+        "print(k,type(k))"
       ],
       "metadata": {
         "id": "thc-n5pRC3Oi",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b3c75c8-d086-4abf-e8a4-02f279505040"
+        "outputId": "8f1d8134-ae08-4e87-fcca-269c9017a62b"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hi hello\n",
+            "Jonathan <class 'str'>\n",
             "45.0 <class 'float'>\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'str' object is not callable",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-efca6e10510f>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m45.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
           ]
         }
       ]
@@ -287,10 +318,11 @@
         "y = 65\n",
         "z = x-y\n",
         "print(z)\n",
-        "print(10.4 + 3) # Additionprint(10 - 3) # Subtratcion\n",
+        "print(10.4 + 3) # Addition\n",
+        "print(10 - 3) # Subtratcion\n",
         "print(10 / 3) # Division\n",
         "print(10 * 3) # Multiplication\n",
-        "print(19.67 // 5) # Floor Division (Cast result to integer)\n",
+        "print(19.67 // 5) # Floor Division\n",
         "print(10 ** 3) # Exponentiation (x ** y) raise x to y\n",
         "print(10 % 3) # Module (returns remainder after division)"
       ],
@@ -299,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Wq9TAFeDHUj",
-        "outputId": "a535de2f-d4cb-4aae-f2de-5b5c224944ae"
+        "outputId": "66b0134b-f81a-4d71-9883-a999c2140b87"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,9 +369,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "78dRU3NWDROT",
-        "outputId": "82fc986f-9d3e-4f66-9839-73b840d446ba"
+        "outputId": "3351a4a3-a278-4fab-8fce-1121ad53e48a"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q_dWrLv2DWR2",
-        "outputId": "8d2ed8cc-7025-4a75-df04-47ef887139d8"
+        "outputId": "dc1987f9-09e7-4d19-e522-05c7978e4385"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,9 +434,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G5ti9bsQDaPf",
-        "outputId": "0ce2345b-73a0-4b2e-803f-6ca7741a20e0"
+        "outputId": "02d24a7b-459e-40ee-93ce-f9550a3c6a12"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,23 +460,23 @@
         "x, y, z = 1, 2, 2\n",
         "\n",
         "print(id(x),id(y),id(z))\n",
-        "print(x is y) # Check if x and y both point to the same thing(memory address)\n",
-        "print(y is z) # Check if y and z both point to the same thing"
+        "print(x is y) # Check if x and y both point to the same memory address\n",
+        "print(y is z) # Check if y and z both point to the same memory address"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3gtbZ1RfDjiM",
-        "outputId": "f2332592-ac18-4bf6-cfaf-4506500ecd7e"
+        "outputId": "f87e52ef-1c1f-447d-e894-03d4dbea1056"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "138423736041712 138423736041744 138423736041744\n",
+            "133156888084720 133156888084752 133156888084752\n",
             "False\n",
             "True\n"
           ]
@@ -465,9 +497,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uB7Gy-b9DqO9",
-        "outputId": "08677779-293e-4d29-9a10-08f31daa7178"
+        "outputId": "701b3f25-f795-4553-c255-403aba3d8dea"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,8 +526,8 @@
         "result = 19 / 3 # Implicit Typecasting\n",
         "print(result)\n",
         "print(type(result))\n",
-        "result = int(result)\n",
-        "#result = round(result ,2) # Explicit Typecasting\n",
+        "result = int(result) # Explicit Typecasting\n",
+        "#result = round(result ,2)\n",
         "print(result)\n",
         "print(type(result))"
       ],
@@ -504,9 +536,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hdjc38tWDuDG",
-        "outputId": "4a0eb39f-ebe4-4f21-ebf5-c947db9ebf2c"
+        "outputId": "29019f07-b092-43ef-bbc2-8d46e0e5bf35"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +568,7 @@
     {
       "cell_type": "code",
       "source": [
-        "num = int(input(\"Enter a number\"))\n",
+        "num = int(input(\"Enter a number: \"))\n",
         "if num % 2 == 0:\n",
         "  print(\"Number is Even\")\n",
         "else:\n",
@@ -547,15 +579,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M22mjswSDzeH",
-        "outputId": "ccd008b2-1d95-4ddd-9af8-e09c87dd2ca7"
+        "outputId": "02f3cbd2-c739-4a67-e1a8-0739272d6ac7"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number44\n",
+            "Enter a number: 44\n",
             "Number is Even\n"
           ]
         }
@@ -583,15 +615,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UoFltkJBPOCD",
-        "outputId": "8bad3896-cb84-4ac2-b791-0d6cd95798e7"
+        "outputId": "16203733-4880-42b0-e120-1d0b51f38511"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "54\n",
+            "65\n",
             "The grade for the student is  D\n"
           ]
         }
@@ -603,7 +635,7 @@
         "x = 30\n",
         "if x > 40 :\n",
         "  if x < 50 :\n",
-        "    print(\"its bnmdbedfjsagj\")\n",
+        "    print(\"its nested if example\")\n",
         "else :\n",
         "  print(\"Not x less than 40\")"
       ],
@@ -612,9 +644,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PeDGC2jsQ5hx",
-        "outputId": "775a2b95-8ad2-44a1-f48e-6fa07b459854"
+        "outputId": "43472ee3-cb5a-4f8f-f058-89147c6c9588"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,9 +683,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xSLvyzpYECSO",
-        "outputId": "d72f78a7-0cc2-433e-cf7e-63b248ec490a"
+        "outputId": "2372e0a9-374e-47d0-cb5b-74401c2d9a9d"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,20 +720,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b973857-cb52-4008-a4a0-96ec4c9bcebd"
+        "outputId": "37d4fae2-b53a-4b6b-871c-ff6bf6a9c753"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number: 8\n",
-            "8 X 1 = 8\n",
-            "8 X 3 = 24\n",
-            "8 X 5 = 40\n",
-            "8 X 7 = 56\n",
-            "8 X 9 = 72\n"
+            "Enter a number: 4\n",
+            "4 X 1 = 4\n",
+            "4 X 2 = 8\n",
+            "4 X 3 = 12\n",
+            "4 X 4 = 16\n",
+            "4 X 5 = 20\n",
+            "4 X 6 = 24\n",
+            "4 X 7 = 28\n",
+            "4 X 8 = 32\n",
+            "4 X 9 = 36\n",
+            "4 X 10 = 40\n"
           ]
         }
       ]
@@ -719,9 +756,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QwS-ZTH-UVjw",
-        "outputId": "5e783950-9ac4-4391-e14d-4ed1b19eda77"
+        "outputId": "07580e3f-331e-43fa-de33-21e6249c58e7"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,9 +830,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HfvBXp5eEiSO",
-        "outputId": "ece5de76-d409-4d5a-9454-589e172540c7"
+        "outputId": "3f257bd3-0b56-441d-ba97-fffbdbbf042a"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,9 +865,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LD8Kwh83ElDf",
-        "outputId": "c8ecdc98-3e8b-4e54-8e96-9ef224df745b"
+        "outputId": "fb6dce46-6390-438a-a979-4c765af3417b"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -858,9 +895,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UHj1KzdhExex",
-        "outputId": "3f20fa26-83b5-4ee1-87b1-e220e821a16f"
+        "outputId": "1ba76e7a-7d15-44f0-f137-f99ed199de84"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
